# litebible

./: .gitignore  BSB.bin.json  BSB.compact  BSB.ultra.json  CLAUDE.md  PERFORMANCE_ARCHITECTURE.md  README.md  convert-bible.cjs  fix_initial_data.py  generate-plain.js  index.html  jest.config.js  manifest.json  package-lock.json  package.json  remove_logs.py  script.js  serve.cjs  styles.css  sw.js  wrangler.jsonc  wrangler.toml
.wrangler/tmp/bundle-SQCAjN/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/bundle-rJPXAg/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-OuX48p/: ab63b315477ea2bbbae119bccde10decd751fa4f-index.html  worker.js
.wrangler/tmp/dev-QU4X7N/: worker.js  worker.js.map
src/: bible-data.js  bible-initial.js  html.js  index.js  manifest.js  plain-styles.js  script.js  styles.js  worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: index.html
tests/: chapter-loading.test.js  fixes-verification.test.js  integration.test.js  setup.js  snap-behavior.test.js
